--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-# OSS客户端依赖
-boto3>=1.26.0
-oss2>=2.16.0
-minio>=7.1.0
-
-# 测试依赖
-pytest>=7.0.0
-pytest-html>=3.1.1
-pytest-cov>=3.0.0 
-
-
-colorama==0.4.4
-pydantic==1.8.2
+tkinter
+pillow
+python-vlc
+requests
+boto3
+oss2
+minio
+colorama
+pydantic
+pytest
+pytest-html
+pytest-cov
