--- a/settings.json
+++ b/settings.json
@@ -20,10 +20,10 @@
         "workers": 6
     },
     "default": {
-        "oss_source": "aws"
+        "oss_source": "minio"
     },
     "list": {
-        "page_size": 1200
+        "page_size": 1000
     },
     "security": {
         "client_encryption": false,
