--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,8 @@
 include readme.md
 include LICENSE
 include requirements.txt
-recursive-include ossnake/ui/resources * 
+include ossnake/config.json
+include ossnake/settings.json
+recursive-include ossnake *
+recursive-exclude * __pycache__
+recursive-exclude * *.py[co] 
