--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,30 +1,38 @@
-name: Publish to PyPI
+name: Upload Python Package
 
 on:
   release:
-    types: [created]
+    types: [published]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout latest code
+      uses: actions/checkout@v4  # 确保拉取最新代码
+
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v3
       with:
-        python-version: '3.8'
-    
+        python-version: '3.x'
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build twine
-    
+        pip install build
+
+    # 清理 dist 文件夹，确保没有旧的构建文件
+    - name: Clean dist folder
+      run: rm -rf dist
+
+    # 构建项目
     - name: Build package
-      run: python -m build
-    
-    - name: Publish to PyPI
-      env:
-        TWINE_USERNAME: __token__
-        TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-      run: |
-        twine upload dist/* 
+      run: python -m build  # 构建打包文件
+
+    # 上传并发布到 PyPI
+    - name: Publish package to PyPI
+      uses: pypa/gh-action-pypi-publish@v1.5.0
+      with:
+        password: ${{ secrets.PYPI_API_TOKEN }}  # 使用 PyPI API token
+        skip_existing: true  # 避免重新上传相同版本的文件
